# ffmpeg-learn

./: .gitattributes  CMakeLists.txt  README.md
src/: decoder.cpp  decoder.h  main.cpp
src/utils/: error_handler.cpp  error_handler.h
